# octuple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
forms/: mainwindow.ui
images/: octuple.psd
resources/: resources.qrc
resources/images/: octuple.psd
src/: initializer.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/interface/: mainwindow.cpp  mainwindow.h
src/tests/: itestwidget.cpp  itestwidget.h
tests/: CMakeLists.txt
